crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@27.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '{[\",\",\",\"]}'::textmultirange;"
---
SelectStmt@0..37
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..36
    TypeCast@7..36
      AConst@7..20
        Sconst@7..20 "'{[\",\",\",\"]}'"
      Typecast@20..22 "::"
      TypeName@22..36
        Ident@22..36 "textmultirange"
  Ascii59@36..37 ";"

