crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@273.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT nummultirange(numrange(1,2)) -|- nummultirange(numrange(2,4));"
---
SelectStmt@0..69
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..66
    AExpr@7..66
      FuncCall@7..33
        Ident@7..20 "nummultirange"
        Ascii40@20..21 "("
        FuncCall@21..33
          Ident@21..29 "numrange"
          Ascii40@29..30 "("
          AConst@30..31
            Iconst@30..31 "1"
          Ascii44@31..32 ","
          AConst@32..33
            Iconst@32..33 "2"
      Ascii41@33..34 ")"
      Ascii41@34..35 ")"
      Whitespace@35..36 " "
      Op@36..39 "-|-"
      Whitespace@39..40 " "
      FuncCall@40..66
        Ident@40..53 "nummultirange"
        Ascii40@53..54 "("
        FuncCall@54..66
          Ident@54..62 "numrange"
          Ascii40@62..63 "("
          AConst@63..64
            Iconst@63..64 "2"
          Ascii44@64..65 ","
          AConst@65..66
            Iconst@65..66 "4"
  Ascii41@66..67 ")"
  Ascii41@67..68 ")"
  Ascii59@68..69 ";"

