crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@276.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT nummultirange(numrange(1,2), numrange(5,6)) -|- nummultirange(numrange(6,7));"
---
SelectStmt@0..84
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..81
    AExpr@7..81
      FuncCall@7..48
        Ident@7..20 "nummultirange"
        Ascii40@20..21 "("
        FuncCall@21..33
          Ident@21..29 "numrange"
          Ascii40@29..30 "("
          AConst@30..31
            Iconst@30..31 "1"
          Ascii44@31..32 ","
          AConst@32..33
            Iconst@32..33 "2"
        Ascii41@33..34 ")"
        Ascii44@34..35 ","
        Whitespace@35..36 " "
        FuncCall@36..48
          Ident@36..44 "numrange"
          Ascii40@44..45 "("
          AConst@45..46
            Iconst@45..46 "5"
          Ascii44@46..47 ","
          AConst@47..48
            Iconst@47..48 "6"
      Ascii41@48..49 ")"
      Ascii41@49..50 ")"
      Whitespace@50..51 " "
      Op@51..54 "-|-"
      Whitespace@54..55 " "
      FuncCall@55..81
        Ident@55..68 "nummultirange"
        Ascii40@68..69 "("
        FuncCall@69..81
          Ident@69..77 "numrange"
          Ascii40@77..78 "("
          AConst@78..79
            Iconst@78..79 "6"
          Ascii44@79..80 ","
          AConst@80..81
            Iconst@80..81 "7"
  Ascii41@81..82 ")"
  Ascii41@82..83 ")"
  Ascii59@83..84 ";"

